--- a/css/style.css
+++ b/css/style.css
@@ -814,7 +814,7 @@ form label {
   color: #4d4d4d;
 }
 .gtco-tabs .gtco-tab-nav li.active a {
-  background: #ffc75f;
+  background: #ffd78e;
   color: #231f20;
 }
 .gtco-tabs .gtco-tab-content-wrap {
