--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   font-size: 16px;
   line-height: 1.7;
   color: #828282;
-  background: #febb17;
+  background: #fda5b9;
 }
 
 #page {
@@ -814,7 +814,7 @@ form label {
   color: #4d4d4d;
 }
 .gtco-tabs .gtco-tab-nav li.active a {
-  background: #fff9D5;
+  background: #ffffff;
   color: #231f20;
 }
 .gtco-tabs .gtco-tab-content-wrap {
@@ -876,13 +876,13 @@ form label {
 
 #gtco-try3 {
   background: #fff9d5;
-  background: -moz-linear-gradient(180deg, #febb17 0%, #d75db2 100%);
-  background: -webkit-gradient(top, bottom, color-stop(0%, #febb17), color-stop(100%, #d75db2));
-  background: -webkit-linear-gradient(180deg, #febb17 0%, #d75db2 100%);
-  background: -o-linear-gradient(180deg, #febb17 0%, #d75db2 100%);
-  background: -ms-linear-gradient(180deg, #febb17 0%, #d75db2 100%);
-  background: linear-gradient(180deg, #febb17 0%, #d75db2 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febb17', endColorstr='#d75db2', GradientType=1 );
+  background: -moz-linear-gradient(180deg, #8569b1 0%, #d75db2 100%);
+  background: -webkit-gradient(top, bottom, color-stop(0%, #8569b1), color-stop(100%, #d75db2));
+  background: -webkit-linear-gradient(180deg, #8569b1 0%, #d75db2 100%);
+  background: -o-linear-gradient(180deg, #8569b1 0%, #d75db2 100%);
+  background: -ms-linear-gradient(180deg, #8569b1 0%, #d75db2 100%);
+  background: linear-gradient(180deg, #8569b1 0%, #d75db2 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8569b1', endColorstr='#d75db2', GradientType=1 );
 }
 #gtco-try4 {
   background: #fff9d5;
